@@ -1,6 +1,8 @@
 0.24
  - Change alias from 'pes' to 'pes domácí' in
    Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
+ - Sort labels in
+   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 
 0.23 2022-11-06T11:03:06+01:00
  - Add cs label to
